Revision history for Perl module Prima

1.75 20XX-XX-XX
 - FrameSet: rename .arrangement to .vertical, remove .resizeMethod

1.74 2024-08-24
 - implement antialiased polygon fill in C, use it in the
   AA emulation in Prima::Drawable::Antialias instead of the old algorithm
 - all AA plotting is supported internally, Prima::Drawable::Antialias is
   not used for the emulated AA drawing
 - add kb:: definitions for the internet keyboards
 - fixes for Strawberry Perl 5.40

1.73 2024-05-07
 - add Prima::Image::Exif, support jpeg tags
 - better compatibility for text rendering outside paint
 - add examples/text-render.pl, inspired by hb_view

1.72 2024-01-31
 - Major rehaul of ROP constants with API compatibility break:
   -- rop(R), put_image(X,Y,I) will not use rop R but rop::Default instead
   -- rop::Blend and rop::CopyPut are no longer equal. rop::XorPut and rop::Xor
      are no longer equal; the latter is rop::XorOver now.
 - Image.text_out() works outside the paint mode by querying glyph bitmaps.
      Other text- and font- related method work too.
 - Pod parsing and rendering moved to Prima::Drawable::Pod
   -- added utils/pod2pdf that works without needing a X11 server
 - Font.underlinePosition and Font.underlineThickness are added
 - Image.has_codec added
 - Prima::Image::Loader and per-frame image loading and saving is added
 - Utils.sound is removed

1.71 2023-10-29
 - Add Prima::Image::webp filter dialog
 - Add DeviceBitmap.maskPixel
 - Add menus to file dialogs
 - Remove obsolete RadioGroup and CheckBoxGroup - use GroupBox instead
 - Proofread all documentation through Grammarly
 - Add progressive image loading and saving
 - Deprecate Prima::Utils::sound

1.70 2023-09-03
 - Use fading effects in widgets
 - Solidify emulated 2D transformations with images
   -- Add aperture point for Image.matrix_transform
 - Animation is using core image processing instead of DeviceBitmap
 - Path rendering is optimized for widened arcs and splines