@@ -2,6 +2,7 @@ Revision history for Perl module Prima
 
 1.75 20XX-XX-XX
  - FrameSet: rename .arrangement to .vertical, remove .resizeMethod
+ - add Date,Time,KeySelector,FrameSet, and CheckList to VB
 
 1.74 2024-08-24
  - implement antialiased polygon fill in C, use it in the
